--- a/RecipeBox/Views/Recipes/Index.cshtml
+++ b/RecipeBox/Views/Recipes/Index.cshtml
@@ -17,7 +17,7 @@ else
   <ul>
     @foreach(Recipe recipe in Model)
     {
-      <li>recipe.Name</li>
+      <li>@Html.ActionLink($"{recipe.Name}", "Details", new {id = recipe.RecipeId})</li>
     }  
   </ul>
 }
