--- a/RecipeBox/Views/Recipes/Create.cshtml
+++ b/RecipeBox/Views/Recipes/Create.cshtml
@@ -1,13 +1,23 @@
 @model RecipeBox.Models.Recipe
+
 <h3>Add a new recipe</h3>
 
-@using(Html.BeginForm())
+
+@using(Html.BeginForm("Create", "Recipes", FormMethod.Post))
 {
-  @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
-  @Html.LabelFor(model => model.Description)
-  @Html.TextBoxFor(model => model.Description)
-  <input type ="submit" value="Add Recipe"/>
+  <form>
+    @Html.LabelFor(model => model.Name)
+    @Html.TextBoxFor(model => model.Name)
+
+    @Html.LabelFor(model => model.Instructions)
+    @Html.TextBoxFor(model => model.Instructions)
+
+    @Html.LabelFor(model => model.Rating)
+    @Html.TextBoxFor(model => model.Rating, 
+    new {max = "5", required = "required"})
+    <input type ="submit" value="Add Recipe"/>
+  </form>
+ 
 }
 
 <p>@Html.ActionLink("show Recipes", "Index")</p>
