--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -3,7 +3,45 @@
 <h2>Recipe Details</h2>
 
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model =>model.Name)</h3>
-<h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h3>
+<h3>@Html.DisplayNameFor(model => model.Instructions): @Html.DisplayFor(model => model.Instructions)</h3>
+<h3>@Html.DisplayNameFor(model => model.Rating): @Html.DisplayFor(model => model.Rating)/5</h3>
 
-<p>@Html.ActionLink("Edit Recipe", "Edit", new { id = ModelExpressionProvider.RecipeId})</p>
-<p>@Html.Action</p>
+
+@if(@ViewBag.RecipeList.Count == 0)
+{
+  <p>Add a recipe first to add ingredients and tags</p>
+}
+else
+{
+  <h3>Add Tag Below:</h3>
+  @using(Html.BeginForm("AddTag", "Recipes", FormMethod.Post))
+  {
+    <form>
+      @Html.HiddenFor(model => model.RecipeId)
+
+      @Html.Label("Select Tag")
+      @Html.DropDownList("TagId", new SelectList(@ViewBag.TagId, "RecipeId", "Name"))
+
+      <input type="submit" value="Add Machine"/>
+    </form>
+    
+  }
+
+  <h3>Add Ingredient Below:</h3>
+  @using (Html.BeginForm("AddIngredient", "Recipes", FormMethod.Post))
+  {
+    <form>
+      @Html.HiddenFor(model => model.RecipeId)
+
+      @Html.Label("Select Ingredient")
+      @Html.DropDownList("IngredientId", new SelectList(@ViewBag.IngredientId, "IngredientId", "Name"))
+
+      <input type="submit" value="Add Machine"/>
+    </form>
+  }
+}
+
+<p>@Html.ActionLink("Edit Recipe", "Edit", new { id = Model.RecipeId})</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<p>@Html.ActionLink("Recipe Box", "Index")</p>
+<p>@Html.ActionLink("Delete Recipe", "Delete", new {id = Model.RecipeId});
